# Game-Engine

./: CMakeLists.txt  README.md
assets/config/: pass_budgets.cfg  pass_budgets.json
assets/textures/: checker.ppm
src/: main.cpp
src/engine/assets/: AssetManager.cpp  AssetManager.h  AssetTypes.h
src/engine/core/: Application.cpp  Application.h
src/engine/ecs/: Registry.h
src/engine/math/: Vec3.h
src/engine/physics/: CollisionSystem.cpp  CollisionSystem.h  Components.h  PhysicsSystem.cpp  PhysicsSystem.h
src/engine/render/: Dx12Renderer.cpp  Dx12Renderer.h  IRenderer.h  NullRenderer.cpp  NullRenderer.h  RenderComponents.h
src/engine/render/dx12/: Dx12RendererBudget.cpp  Dx12RendererCulling.cpp  Dx12RendererHud.cpp  Dx12RendererPrivate.h  Dx12RendererResources.cpp  Dx12RendererSetup.cpp
src/game/: SampleGame.cpp  SampleGame.h
src/tools/: BudgetProfileCli.cpp
